# GNM-Studio

./: .gitignore  .oxlintrc.json  MANUAL_SMOKE_TEST.md  README.md  README_ZH.md  REFACTOR_CLEANUP_INVENTORY.md  THIRD_PARTY_NOTICES.md  TODO.md  V1.1.0_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
public/: robots.txt  site.webmanifest  sitemap.xml
public/models/: gnm_anatomy.gna  gnm_custom_head_fit.json  gnm_head_runtime.json
src/: App.css  App.tsx  faceTracker.worker.ts  identity.worker.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  output.json
src-tauri/icons/: icon.icns
src-tauri/src/: gnm_core.rs  lib.rs  main.rs
src/app/: StudioShell.tsx  studioConfig.ts
src/components/: AudioMeter.tsx  (+9 more)
tools/: build_custom_head_runtime.py  build_gnm_runtime.py  build_web_brand_assets.py  build_web_expression_runtime.py  build_web_identity_runtime.py  check_custom_head_runtime.mjs  check_export_paths.mjs  check_face_alignment.mjs  check_facecap_asset.mjs  check_full_expression_state.mjs  check_fullscreen_controls.mjs  check_gnm_eyes.mjs  check_head_pose.mjs  check_identity_transition.mjs  check_manual_joints.mjs  check_motion_edit.mjs  check_mouth_retarget.mjs  check_output_owner.mjs  check_pages_build.mjs  check_pause_resume.mjs  check_presets.mjs  check_recording_pipeline.mjs  check_runtime_assets.mjs  check_skin_material.mjs  check_web_expression.mjs  check_web_identity.mjs  custom_head_landmarks.py  package_portable.ps1
(+99 files in other folders)
