[package]
name = "gnm-studio"
version = "1.2.1"
description = "Private, local-first GNM head creation and motion capture studio"
authors = ["GNM Studio contributors"]
license = "Apache-2.0"
repository = "https://github.com/Saganaki22/GNM-Studio"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gnm_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
ndarray = "0.16"
ndarray-npy = "0.9"
thiserror = "2"
tauri-plugin-opener = "2.5.4"
